--- a/src/components/_a.scss
+++ b/src/components/_a.scss
@@ -9,7 +9,7 @@
 
 a {
   /// Color for all `<a>` tags
-  $base-link-color: rgb(0, 0, 255) !default;
+  $base-link-color: #00f !default;
   /// Color for all `<a>` tags in a hover state
   $base-link-active-color: rgb(255, 0, 0) !default;
   /// Color for all `<a>` tags while mouseovered
@@ -21,15 +21,16 @@ a {
 
   color: $base-link-color;
 
-  &:active {
-    color: $base-link-active-color;
-  }
-  &:hover {
-    color: $base-link-hover-color;
-  }
-  &:visited {
-    color: $base-link-visited-color;
-  }
+}
+
+a:active {
+  color: $base-link-active-color;
+}
+a:hover {
+  color: $base-link-hover-color;
+}
+a:visited {
+  color: $base-link-visited-color;
 }
 
 /**
