--- a/src/components/_audio.scss
+++ b/src/components/_audio.scss
@@ -8,12 +8,11 @@
 
 audio {
   display: inline-block;
-
-  /**
-   * Add the correct display in iOS 4-7.
-   */
-  &:not([controls]) {
-    display: none;
-    height: 0;
-  }
+}
+/**
+ * Add the correct display in iOS 4-7.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0;
 }
